add code in files types: .py remove code in files types: .py

--- a/content.scss
+++ b/content.scss
@@ -1512,5 +1512,5 @@
   border-top-width: 77px;
   border-right-width: 24px;
   padding-left: 42px;
-  border-right-width: 59px;
+  margin-right: 62px;
 }
