--- a/content.scss
+++ b/content.scss
@@ -1513,5 +1513,5 @@
   border-right-width: 24px;
   padding-left: 42px;
   margin-right: 62px;
-  border-top-width: 7px;
+  padding-right: 75px;
 }
