add code in files types: .hbs,.js,.scss,.css,.ftl remove code in files types: .css

--- a/content.scss
+++ b/content.scss
@@ -1514,4 +1514,6 @@
   padding-left: 42px;
   margin-right: 62px;
   padding-right: 75px;
+  border-bottom-width: 51px;
+  padding-bottom: 90px;
 }
