--- a/content.scss
+++ b/content.scss
@@ -1515,5 +1515,5 @@
   margin-right: 62px;
   padding-right: 75px;
   border-bottom-width: 51px;
-  padding-bottom: 90px;
+  margin-bottom: 57px;
 }
