--- a/content.scss
+++ b/content.scss
@@ -1514,5 +1514,5 @@
   padding-left: 42px;
   margin-right: 62px;
   padding-right: 75px;
-  border-bottom-width: 51px;
+  border-right-width: 15px;
 }
