--- a/content.scss
+++ b/content.scss
@@ -1514,5 +1514,6 @@
   padding-left: 42px;
   margin-right: 62px;
   padding-right: 75px;
-  border-right-width: 85px;
+  line-height: 91px;
+  border-left-width: 33px;
 }
