--- a/content.scss
+++ b/content.scss
@@ -1515,5 +1515,5 @@
   margin-right: 62px;
   padding-right: 75px;
   line-height: 91px;
-  border-left-width: 85px;
+  border-bottom-width: 33px;
 }
