--- a/content.scss
+++ b/content.scss
@@ -1517,5 +1517,5 @@
   line-height: 91px;
   padding-top: 50px;
   border-top-width: 29px;
-  border-bottom-width: 91px;
+  padding-right: 23px;
 }
