add code in files types: ,.py,.java,.sql,.properties,.xml,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.py,.java,.xml,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1517,5 +1517,5 @@
   line-height: 91px;
   padding-top: 50px;
   border-top-width: 29px;
-  border-left-width: 48px;
+  border-right-width: 14px;
 }
