add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1380,6 +1380,5 @@
   margin-top: 31px;
   border-right-width: 8px;
   padding-top: 10px;
-  line-height: 54px;
-  margin-bottom: 64px;
+  padding-left: 9px;
 }
