--- a/content.scss
+++ b/content.scss
@@ -1511,5 +1511,5 @@
   border-bottom-width: 93px;
   border-top-width: 77px;
   border-right-width: 24px;
-  border-left-width: 11px;
+  border-top-width: 47px;
 }
