add code in files types: ,.py,.java,.sql,.properties,.xml,.js,.hbs,.scss,.css,.svg,.ftl remove code in files types: ,.py,.java,.sql,.xml,.properties,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1511,5 +1511,5 @@
   border-bottom-width: 93px;
   border-top-width: 77px;
   border-right-width: 24px;
-  border-top-width: 47px;
+  margin-top: 59px;
 }
