add code in files types: .py,.java,.sql,.properties,.hbs,.js,.scss,.css,.ftl remove code in files types: .py,.java,.sql,.properties,.hbs,.js,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1511,5 +1511,5 @@
   border-bottom-width: 93px;
   border-top-width: 77px;
   border-right-width: 24px;
-  margin-top: 59px;
+  border-left-width: 77px;
 }
