add code in files types: .java remove code in files types:

--- a/content.scss
+++ b/content.scss
@@ -1511,5 +1511,6 @@
   border-bottom-width: 93px;
   border-top-width: 77px;
   border-right-width: 24px;
-  border-left-width: 77px;
+  margin-bottom: 20px;
+  margin-right: 47px;
 }
