add code in files types: .java,.hbs,.scss,.js,.ftl remove code in files types: .java,.hbs,.scss,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1512,5 +1512,5 @@
   border-top-width: 77px;
   border-right-width: 24px;
   margin-bottom: 20px;
-  margin-right: 47px;
+  margin-left: 27px;
 }
