--- a/content.scss
+++ b/content.scss
@@ -1512,5 +1512,5 @@
   border-top-width: 77px;
   border-right-width: 24px;
   margin-bottom: 20px;
-  padding-right: 53px;
+  border-top-width: 73px;
 }
