--- a/content.css
+++ b/content.css
@@ -1380,5 +1380,5 @@
   margin-top: 31px;
   border-right-width: 8px;
   padding-top: 10px;
-  padding-right: 13px;
+  border-bottom-width: 24px;
 }
