--- a/content.scss
+++ b/content.scss
@@ -1512,5 +1512,5 @@
   border-top-width: 77px;
   border-right-width: 24px;
   margin-bottom: 20px;
-  border-top-width: 73px;
+  font-size: 98px;
 }
