add code in files types: .js,.css,.scss remove code in files types: .js,.css,.scss

--- a/content.scss
+++ b/content.scss
@@ -1512,5 +1512,5 @@
   border-top-width: 77px;
   border-right-width: 24px;
   margin-bottom: 20px;
-  border-top-width: 9px;
+  font-size: 34px;
 }
