add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1380,5 +1380,5 @@
   margin-top: 31px;
   border-right-width: 8px;
   padding-top: 10px;
-  border-top-width: 70px;
+  border-left-width: 97px;
 }
