--- a/content.scss
+++ b/content.scss
@@ -1512,5 +1512,6 @@
   border-top-width: 77px;
   border-right-width: 24px;
   margin-bottom: 20px;
-  border-right-width: 96px;
+  line-height: 70px;
+  margin-right: 64px;
 }
