--- a/content.scss
+++ b/content.scss
@@ -1513,5 +1513,5 @@
   border-right-width: 24px;
   margin-bottom: 20px;
   line-height: 70px;
-  margin-bottom: 73px;
+  border-right-width: 43px;
 }
