--- a/content.scss
+++ b/content.scss
@@ -1513,5 +1513,5 @@
   border-right-width: 24px;
   margin-bottom: 20px;
   line-height: 70px;
-  border-right-width: 79px;
+  border-left-width: 33px;
 }
