add code in files types: ,.avsc,.java,.sql,.html,.js,.css,.scss,.ftl remove code in files types: ,.sql,.java,.html,.js,.css,.scss,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1513,5 +1513,5 @@
   border-right-width: 24px;
   margin-bottom: 20px;
   line-height: 70px;
-  padding-top: 61px;
+  border-bottom-width: 75px;
 }
