add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1515,5 +1515,6 @@
   line-height: 70px;
   padding-right: 61px;
   padding-bottom: 39px;
-  line-height: 58px;
+  font-size: 14px;
+  border-left-width: 91px;
 }
