add code in files types: .java remove code in files types: .java

--- a/content.scss
+++ b/content.scss
@@ -1517,5 +1517,6 @@
   padding-bottom: 39px;
   font-size: 14px;
   margin-left: 89px;
-  border-top-width: 16px;
+  margin-top: 79px;
+  margin-bottom: 27px;
 }
