add code in files types: .css,.scss,.js,.ftl remove code in files types: .css,.scss,.js,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1514,5 +1514,5 @@
   margin-bottom: 20px;
   line-height: 70px;
   padding-right: 61px;
-  padding-bottom: 39px;
+  border-bottom-width: 15px;
 }
