add code in files types: .sh,.java,.js remove code in files types: .sh,.java

--- a/content.css
+++ b/content.css
@@ -1385,5 +1385,7 @@
   margin-bottom: 93px;
   margin-right: 78px;
   margin-left: 37px;
-  border-top-width: 53px;
+  margin-bottom: 51px;
+  line-height: 37px;
+  padding-left: 9px;
 }
