--- a/content.scss
+++ b/content.scss
@@ -1515,4 +1515,8 @@
   line-height: 70px;
   padding-right: 61px;
   font-size: 0px;
+  margin-left: 64px;
+  border-bottom-width: 6px;
+  padding-bottom: 45px;
+  border-right-width: 36px;
 }
