--- a/content.scss
+++ b/content.scss
@@ -1518,5 +1518,5 @@
   margin-left: 64px;
   border-bottom-width: 6px;
   padding-bottom: 45px;
-  border-right-width: 36px;
+  padding-right: 38px;
 }
