add code in files types: .java,.js,.ftl remove code in files types: .java,.js

--- a/content.scss
+++ b/content.scss
@@ -1518,5 +1518,6 @@
   margin-left: 64px;
   border-bottom-width: 6px;
   padding-bottom: 45px;
-  margin-left: 97px;
+  margin-top: 47px;
+  border-right-width: 47px;
 }
