--- a/content.scss
+++ b/content.scss
@@ -1519,5 +1519,5 @@
   border-bottom-width: 6px;
   padding-bottom: 45px;
   margin-top: 47px;
-  border-right-width: 47px;
+  line-height: 71px;
 }
