add code in files types: .md remove code in files types:

--- a/content.css
+++ b/content.css
@@ -1389,5 +1389,6 @@
   line-height: 37px;
   padding-right: 71px;
   margin-top: 12px;
-  margin-bottom: 21px;
+  line-height: 56px;
+  padding-top: 34px;
 }
