--- a/content.scss
+++ b/content.scss
@@ -1519,5 +1519,6 @@
   border-bottom-width: 6px;
   padding-bottom: 45px;
   margin-top: 47px;
-  padding-right: 99px;
+  padding-right: 94px;
+  padding-top: 57px;
 }
