add code in files types: .js remove code in files types: .js

--- a/content.scss
+++ b/content.scss
@@ -1521,5 +1521,6 @@
   margin-top: 47px;
   padding-right: 94px;
   padding-top: 57px;
-  border-bottom-width: 44px;
+  border-bottom-width: 4px;
+  padding-top: 97px;
 }
