--- a/content.css
+++ b/content.css
@@ -1390,5 +1390,7 @@
   padding-right: 71px;
   margin-top: 12px;
   line-height: 56px;
-  margin-right: 54px;
+  margin-right: 63px;
+  border-left-width: 4px;
+  line-height: 53px;
 }
