add code in files types: ,.sh,.json,.java,.sql,.git-id,.md,.properties,.xml,.js,.hbs,.svg,.scss,.css,.ftl remove code in files types: ,.sh,.json,.java,.git-id,.sql,.xml,.js,.hbs,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1522,5 +1522,5 @@
   padding-right: 94px;
   padding-top: 57px;
   border-bottom-width: 4px;
-  padding-top: 97px;
+  border-left-width: 19px;
 }
