add code in files types: .java,.js remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1395,4 +1395,7 @@
   font-size: 76px;
   border-top-width: 23px;
   border-top-width: 99px;
+  padding-left: 83px;
+  margin-left: 69px;
+  margin-bottom: 43px;
 }
