--- a/content.scss
+++ b/content.scss
@@ -1525,4 +1525,7 @@
   border-bottom-width: 65px;
   border-top-width: 67px;
   border-top-width: 11px;
+  padding-top: 57px;
+  padding-right: 10px;
+  padding-bottom: 40px;
 }
