add code in files types: ,.py,.sql,.sh,.java,.js,.hbs,.scss,.ftl remove code in files types: .py,.sql,.java,.hbs,.js,.scss,.css,.ftl

--- a/content.scss
+++ b/content.scss
@@ -1527,5 +1527,5 @@
   border-top-width: 11px;
   padding-top: 57px;
   padding-right: 10px;
-  border-right-width: 38px;
+  margin-bottom: 74px;
 }
