add code in files types: .java remove code in files types: .java

--- a/content.css
+++ b/content.css
@@ -1399,4 +1399,8 @@
   margin-left: 69px;
   margin-bottom: 43px;
   border-right-width: 52px;
+  margin-top: 31px;
+  padding-left: 62px;
+  margin-right: 20px;
+  border-left-width: 13px;
 }
