--- a/content.scss
+++ b/content.scss
@@ -1528,4 +1528,7 @@
   padding-top: 57px;
   padding-right: 10px;
   padding-top: 85px;
+  border-left-width: 74px;
+  padding-bottom: 2px;
+  margin-left: 58px;
 }
