add code in files types: .js remove code in files types: .js

--- a/content.css
+++ b/content.css
@@ -1402,5 +1402,5 @@
   margin-top: 31px;
   padding-left: 62px;
   margin-right: 20px;
-  border-left-width: 13px;
+  border-bottom-width: 25px;
 }
