--- a/content.scss
+++ b/content.scss
@@ -1531,5 +1531,5 @@
   border-left-width: 74px;
   padding-bottom: 2px;
   font-size: 78px;
-  border-right-width: 65px;
+  border-bottom-width: 94px;
 }
