--- a/content.scss
+++ b/content.scss
@@ -1531,5 +1531,6 @@
   border-left-width: 74px;
   padding-bottom: 2px;
   font-size: 78px;
-  padding-right: 0px;
+  line-height: 67px;
+  margin-bottom: 87px;
 }
